feat: Card module with examples

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,7 @@
   --color-earaDark: #272727;
   --color-earaDark-lighter: #272727;
   --color-earaBgLight: #EDEDFA;
+  --color-earaBgDark: #E2E2E5;
 }
 
 body{
