--- a/src/styles/Title.module.css
+++ b/src/styles/Title.module.css
@@ -1,5 +1,12 @@
-.root[data-order="1"]{
-    font-size: 56px;
-    line-height: 100%;
-    font-weight: 500;
+.root[data-order='1'] {
+  font-size: 56px;
+  line-height: 100%;
+  font-weight: 500;
+}
+
+@media (max-width: 768px) {
+  .root[data-order='1'] {
+    font-size: 40px;
+    line-height: 110%;
+  }
 }
