--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,7 @@
   --color-earaDark-lighter: #272727;
   --color-earaBgLight: #ededfa;
   --color-earaBgDark: #e2e2e5;
+  --color-earaGrayLight: #eaeaea;
 }
 
 html {
